twister title lowercase

--- a/_publications/2024-09-02-twister.md
+++ b/_publications/2024-09-02-twister.md
@@ -1,5 +1,5 @@
 ---
-title: "A Randomization-Based, Model-Free Approach to Functional Neuroimaging: A Proof of Concept"
+title: "A randomization-based, model-free approach to functional neuroimaging: a proof of concept"
 collection: publications
 permalink: /publication/2024-09-02-twister
 date: 2024-09-02
