published window paper

--- a/_publications/2025-03-21-window.md
+++ b/_publications/2025-03-21-window.md
@@ -4,8 +4,8 @@ collection: publications
 permalink: /publications/2025-03-21-window
 date: 2025-03-21
 venue: 'Open Mind'
-psyarxiv: 'https://doi.org/10.31234/osf.io/zgf6s_v2'
+link: 'https://doi.org/10.1162/opmi_a_00206'
 paperurl: '/files/papers/mazor2025window.pdf'
-citation: '<b>Mazor, M.</b> (in press). Inference about absence as a window into the mental self-model. <i>Open Mind</i>'
+citation: '<b>Mazor, M.</b> (2025). Inference about absence as a window into the mental self-model. <i>Open Mind</i>, 9, 635-651.'
 
 ---
