--- a/_publications/2024-09-02-twister.md
+++ b/_publications/2024-09-02-twister.md
@@ -9,5 +9,5 @@ paperurl: 'http://matanmazor.github.io/files/papers/mazor2024twister.pdf'
 link: 'https://www.mdpi.com/1099-4300/26/9/751'
 summary_paragraph: >
  MRI machines cannot directly measure brain activity. Instead, they measures something that is closely linked to neuronal activity: blood oxygenation in different parts of the brain. To go from MRI data back to neuronal activity, brain scientists assume a <i>model</i> of how oxygen in the blood changes when neurons fire. But this model is sometimes off, for example in certain brain regions and among specific groups of people. Together with [Roy](https://en-social-sciences.tau.ac.il/profile/rmukamel) we came up with <i>TWISTER</i>: a model-free approach to functional MRI experiments and analysis. We provide a proof concept and Matlab code. This paper is published as part of a special <i>Entropy</i> issue for [Karl Friston](https://profiles.ucl.ac.uk/2747-karl-friston)'s 65th birthday.
-citation: '<b>Mazor, M.</b>, Mukamel, R. (2024). A Randomization-based, model-free approach to functional neuroimaging: a proof of concept. <i>Entropy</i>'
+citation: '<b>Mazor, M.</b> & Mukamel, R. (2024). A Randomization-based, model-free approach to functional neuroimaging: a proof of concept. <i>Entropy</i>'
 ---
