--- a/_publications/2025-12-08-dualism.md
+++ b/_publications/2025-12-08-dualism.md
@@ -2,7 +2,9 @@
 title: "Mind-body dualism as social signalling"
 collection: publications
 permalink: /publication/2025-12-08-dualism
-date: 2025-12-08
+date: 2026-01-16
+venue: 'Berggruen prize essay competition (shortlisted)'
+link: 'https://loc.closertotruth.com/essay/mind-body-dualism-as-social-signaling'
 paperurl: '/files/papers/mazor2025mind.pdf'
 citation: '<b>Mazor, M.</b>, Mind-body dualism as social signalling.'
 
