arxiv link, berggruen essay mention

--- a/_publications/2025-12-08-dualism.md
+++ b/_publications/2025-12-08-dualism.md
@@ -6,6 +6,6 @@ date: 2026-01-16
 venue: 'Berggruen prize essay competition (shortlisted)'
 link: 'https://loc.closertotruth.com/essay/mind-body-dualism-as-social-signaling'
 paperurl: '/files/papers/mazor2025mind.pdf'
-citation: '<b>Mazor, M.</b>, Mind-body dualism as social signalling.'
+citation: '<b>Mazor, M.</b>, Mind-body dualism as social signalling (2026). <i>Berggruen prize essay competition, shortlisted</i>'
 
 ---
